<resources>
    <string name="app_name">Handy</string>
    <string name="home">Home</string>
    <string name="make_a_booking">Make a Booking</string>
    <string name="help">Help</string>
    <string name="promotions">Promotions</string>
    <string name="promotions_menu">Apply Promo Code</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="default_error_string">"Sorry, something went wrong. Please try again."</string>
    <string name="loading">Loading…</string>
    <string name="loading_error">There was an error loading.</string>
    <string name="rescheduling">Rescheduling…</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="facebook_app_id">381615805205781</string>
    <string name="or">or</string>
    <string name="log_out">Log Out</string>
    <string name="share_using">Share using…</string>
    <string name="my_bookings">My Bookings</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="edit_pro_team">Edit Pro Team</string>
    <string name="history">History</string>
    <string name="account">My Account</string>
    <string name="want_to_log_out">Are you sure you want to log out?</string>
    <string name="update">Update</string>
    <string name="you_have_credits">YOU HAVE&#160;&#160;#&#160;&#160;CREDITS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirmation">Confirm New Password</string>
    <string name="new_password_confirmation_error">Passwords don\'t match</string>
    <string name="update_pwd_error">To update password you need to enter old and new passwords.</string>
    <string name="update_pwd_missing_input_error">Looks like you\'re missing something. Please enter all fields.</string>
    <string name="pwd_length_error">Your password must be at least 8 characters.</string>
    <string name="info_updated">Your information has been updated.</string>
    <string name="env_format"
            formatted="false"
        >%s: v%s (%s)</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="hours">Hours</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="professional">Professional</string>
    <string name="next">Next</string>
    <string name="location">Location</string>
    <string name="where_located">Okay, where are you located?</string>
    <string name="where_located_simple">Where are you located?</string>
    <string name="zip_code">ZIP Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="details">Details</string>
    <string name="tell_us_job">Got it! Tell us about the job</string>
    <string name="tell_us_place">Tell us about your place</string>
    <string name="fragment_booking_options_input_instructions_cleaning_service">What is the size of your home?</string>
    <string name="fragment_booking_options_input_instructions_noncleaning_service">Tell us about the job</string>
    <string name="comments">Comments</string>
    <string name="time">Time</string>
    <string name="select_start_time">Select a start time</string>
    <string name="pro_x_availability_formatted">%1$s\'s Availability</string>
    <string name="request_pro">Request Pro</string>
    <string name="request_pro_formatted">Request %1$s</string>
    <string name="street_addr">Street Address</string>
    <string name="apt_num">Apt #</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="payment">Payment</string>
    <string name="edit_payment">Edit Payment</string>
    <string name="credit_card_num">Credit Card Number</string>
    <string name="formatted_last4">•••• %1$s</string>
    <string name="error_payment_info_invalid">The credit card information you provided is invalid. Please make sure all the fields are correct.</string>
    <string name="update_successful">Update successful</string>
    <string name="change">Change</string>
    <string name="not_in_zip">Not in %s?</string>
    <string name="mm_yy">MM/YY</string>
    <string name="credit_card">Credit Card</string>
    <string name="cvc">CVC</string>
    <string name="contact">Contact</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_back_formatted">Welcome back, %1$s!</string>
    <string name="skip">Skip</string>
    <string name="peak_price_info">Due to high demand, peak pricing is in effect. Scroll through the calendar to find alternate times without peak pricing.</string>
    <string name="peak_price_info_unavailable">Due to high demand, certain times are unavailable. Scroll through the calendar to find alternate times.</string>
    <string name="unavailable">Unavailable</string>
    <string name="confirmation">Confirmation</string>
    <string name="payment_confirmed">Your payment is confirmed.</string>
    <string name="finish">Finish</string>
    <string name="use_your_pwd">Use your password to log in and \nmanage your bookings.</string>
    <string name="how_often">How Often?</string>
    <string name="every_week">Every week</string>
    <string name="every_four_weeks">Every 4 weeks</string>
    <string name="every_two_weeks">Every 2 weeks</string>
    <string name="save">Save</string>
    <string name="available">Available</string>
    <string name="extras">Extras</string>
    <string name="apply">Apply</string>
    <string name="promo_code_opt">Promo Code (optional)</string>
    <string name="remove">Remove</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="promo_code">Promo Code</string>
    <string name="book_instantly">Book instantly</string>
    <string name="reschedule">Reschedule</string>
    <string name="reschedule_instead">Reschedule Instead?</string>
    <string name="reschedule_instead_of_canceling">If you\'d like, we can reschedule this\nbooking instead of canceling.</string>
    <string name="reschedule_cancel_booking">I\'d like to cancel my booking</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="reschedule_all_bookings">Reschedule all subsequent bookings?</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="skip_booking">Skip Booking</string>
    <string name="why_cancel">Why are you canceling?</string>
    <string name="get_started">Get Started</string>
    <string name="onboard_msg">Book trusted cleaners\n &amp; handymen instantly</string>
    <string name="onboard_msg_pro">We’ll match you with\n a highly rated professional</string>
    <string name="onboard_msg_manage">Manage your bookings\n on the go</string>
    <string name="onboard_msg_rate">Rate to help us\n maintain quality service</string>
    <string name="using_promo">USING PROMO CODE %s</string>
    <string name="how_was_last_service">How was your last service?</string>
    <string name="how_was_last_service_with">How was your booking with %s?</string>
    <string name="submit">Submit</string>
    <string name="thanks_for_feedback">Thanks for your feedback!</string>
    <string name="were_sorry_feedback">We’re sorry to hear that you had a less than perfect experience.\nYour feedback will help us improve the service for next time.</string>
    <string name="improvement_selection_required">Please make a selection.</string>
    <string name="rating_improvement_anonymous">All feedback is anonymous.</string>
    <string name="rating_improvement_all_that_apply">Select all that apply.</string>
    <string name="close">Close</string>
    <string name="glad_you_enjoy">Glad you enjoyed it!</string>
    <string name="good_vibes">We love to pass on the good vibes.</string>
    <string name="send">Send</string>
    <string name="type_something">Type something</string>
    <string name="feedback_hint">\"Great work! Loved the kitchen.\"</string>
    <string name="laundry">Laundry</string>
    <string name="get_started_laundry">Get Started with Laundry</string>
    <string name="laundry_info"><![CDATA[Take care of home cleaning and laundry at the same time! Turn on dry cleaning & laundry pick-up service for your future home cleanings.]]></string>
    <string name="see_pricing">See Pricing</string>
    <string name="pickup_title">YOUR FIRST PICK-UP</string>
    <string name="dropoff_title">DELIVERY</string>
    <string name="dropoff_info">When laundry is ready in 48 hours, we’ll ask for a delivery time.</string>
    <string name="addtional_laundry_info">Adding dry cleaning &amp; laundry is free. You will only be charged if you give us laundry. Skip anytime.</string>
    <string name="add_laundry">Add to Future Cleanings</string>
    <string name="entry_info">Entry Information</string>
    <string name="cleaning_routine">Cleaning Routine</string>
    <string name="job_details">Job Details</string>
    <string name="total">Total</string>
    <string name="need_help_question">Need help?</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_message">Send Message</string>
    <string name="contact_form_hint">Tell us how we can help</string>
    <string name="back">Back</string>
    <string name="contact_received">Message sent! \nWe\'ll follow up shortly.</string>
    <string name="label">Label</string>
    <string name="option">Option</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>
    <string name="cleaners">Cleaners</string>
    <string name="handymen">Handymen</string>
    <string name="other">Other</string>
    <string name="none">None</string>
    <string name="enter_amount">Enter amount</string>
    <string name="press_back_again">Press back button again to exit</string>
    <string name="select_all_that_apply">Select all that apply</string>
    <string name="complete">Complete</string>
    <string name="still_need_help">Still need help?</string>
    <string name="done">Done</string>
    <string name="add_to_pro_team">Add to Pro Team</string>
    <string name="adding">Adding…</string>
    <string name="cancel_recurring_booking_title">Cancel Cleaning Plan</string>
    <string name="free_cleanings">Get Free Cleanings</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="already_have_account">Already have an account?\u0020</string>
    <string name="title_activity_pro_team">My Pro Team</string>
    <string name="cd_pro_team_pro_card_remove_pro_icon">Remove Pro Icon</string>
    <string name="pro_team_find_pros_from_friends">Find the pros your friends already love</string>
    <string name="pro_team_connect_with_facebook">Connect with Facebook</string>
    <string name="pro_team_see_pro_recommendations">You\'ll see pro recommendations from friends here as we find them.</string>
    <string name="pro_team_ok">OK, Got it</string>
    <string name="cd_view_payment_questionmark_icon">Questionmark icon</string>
    <string name="transition_pro_image">pro_image</string>
    <string name="transition_stars">stars</string>
    <string name="transition_divider">divider</string>
    <string name="rating_flow_feedback_hint">Enter your message</string>
    <string name="rating_flow_help_prompt">Tell Handy what happened:</string>
    <string name="bottom_nav_item_bookings">Bookings</string>
    <string name="bottom_nav_item_messages">Messages</string>
    <string name="bottom_nav_item_services">Services</string>
    <string name="bottom_nav_item_share">Share</string>
    <string name="bottom_nav_item_account">Account</string>
</resources>