<?xml version="1.0" encoding="utf-8"?>

<com.handybook.handybook.ui.view.HelpBannerView
    android:id="@+id/help_node_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/handy_blue"
    android:orientation="horizontal"
    style="@style/Banner"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    >

    <FrameLayout
        android:id="@+id/nav_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nav_text"
            android:paddingRight="44dp"
            android:paddingLeft="44dp"
            android:text="@string/help"
            style="@style/TextView.Navbar" />

        <RelativeLayout
            android:id="@+id/menu_button_layout"
            style="@style/MenuButtonLayout" />

        <ImageView
            android:id="@+id/close_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@drawable/ic_x"
            android:visibility="visible"
            android:contentDescription="@string/close"
            android:layout_gravity="end|center_vertical" />

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleX="-1"
            android:padding="15dp"
            android:src="@drawable/ic_chevron"
            android:visibility="gone"
            android:contentDescription="@string/back"
            android:layout_gravity="start|center_vertical" />

    </FrameLayout>

</com.handybook.handybook.ui.view.HelpBannerView>