<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/pro_team_facebook_log_in_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/handy_background_gray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/pro_team_facebook_title"
            style="@style/TextView.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin_half"
            android:layout_marginLeft="@dimen/default_margin_4x"
            android:layout_marginRight="@dimen/default_margin_4x"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/pro_team_find_pros_from_friends"
            />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/pro_team_facebook_log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin_half"
            android:paddingBottom="@dimen/pro_team_margin"
            android:paddingTop="@dimen/pro_team_margin"
            android:textSize="@dimen/default_text_size"
            facebook:com_facebook_login_text="@string/pro_team_connect_with_facebook"
            />

        <TextView
            android:id="@+id/pro_team_facebook_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin_3x"
            android:layout_marginRight="@dimen/default_margin_3x"
            android:gravity="center"
            android:text="@string/pro_team_see_pro_recommendations"
            android:textColor="@color/handy_tertiary_gray"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/pro_team_facebook_ok_button"
            style="@style/Button.RoundEmptyGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:minHeight="@dimen/pro_team_button_height"
            android:text="@string/pro_team_ok"
            android:textSize="@dimen/default_text_size"
            android:visibility="gone"
            tools:visibility="visible"
            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/pro_team_dismiss_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_pro_team_pro_card_remove_pro_icon"
        android:padding="@dimen/default_padding"
        android:src="@drawable/ic_pro_team_x_small"
        />
</RelativeLayout>
